--- a/public/css/masterlogin.css
+++ b/public/css/masterlogin.css
@@ -7,7 +7,7 @@
 }
 
 body{
-  font-family: Lato, sans-serif;
+  font-family: Roboto, sans-serif;
   background-image: url('../img/bg.jpg');
   background-position: center center;
   background-repeat: no-repeat;
